font problem and alignment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>EzBim</title>
     <link rel="stylesheet" href="Bstyle.css"></link>
     <link rel="icon" href="assets/Asset2.svg"></link>
+    <link href="http://fonts.cdnfonts.com/css/lemonmilk" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
 </head>
 <body>
     <header>
