--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <section class="hero__content">
                     <div class="hero__object__container">
                         <!-- <div class="hero__object" data-tilt data-tilt data-tilt-glare data-tilt-max-glare="0.5"data-tilt data-tilt-scale="1.1">
-                            <img class="object" src="./assets/Asset3.svg"></img> what the fuck
+                            <img class="object" src="./assets/Asset3.svg"></img> 
                         </div> -->
                         <div class="hero__object" data-tilt data-tilt data-tilt-glare data-tilt-max-glare="0"data-tilt data-tilt-scale="1">
                             <img class="object" src="./assets/Asset3.svg"></img>
