--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul class="nav__menu">
                     <li class="nav__item" > <a class="nav__links" href="#">Gamers</a> </li>
                     <li class="nav__item" > <a class="nav__links" href="#">Playlist</a> </li>
-                    <li class="nav__item" > <a class="nav__links" href="portfolio.html">Portfolioo </a></li>
+                    <li class="nav__item" > <a class="nav__links" href="portfolio.html">Portfolio </a></li>
                     <li class="nav__btn" > <a class="button"href="#"> Message</a></li>
 
                 </ul>
