--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             
                         <p1 class="footer" id="footer1">Credits
                             <li>
-                                <p2 class="footer__iner">Created By Bimbim</p2>
+                                <p2 class="footer__iner">Created By Elza-Bimbim</p2>
                             </li>
                         </p1>
                         <p1 class="footer">Trademarks
