msg speed pop up change

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             
                         <p1 class="footer" id="footer1">Credits
                             <li>
-                                <p2 class="footer__iner">Created By Elza-Bimbim</p2>
+                                <p2 class="footer__iner">Created <br>By Elza-Bimbim</p2>
                             </li>
                         </p1>
                         <p1 class="footer">Trademarks
