adding Light/Dark Mode

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="nav__item" > <a class="nav__links" href="#">Playlist</a> </li>
                     <li class="nav__item" > <a class="nav__links" href="portfolio.html">Portfolio </a></li>
                     <li class="nav__btn" id="mesage"> <a class="button"href="#"> Message</a></li>
-
+                    <li class="light__mode" id="lightmode"><img src="./assets/Icons/Light_mode.svg"></img></li>
                 </ul>
                 
             </div>
@@ -53,15 +53,16 @@
                         </div> -->
                         <div class="hero__object" data-tilt data-tilt data-tilt-glare data-tilt-max-glare="0"data-tilt data-tilt-scale="1">
                             <img class="object" src="./assets/Asset3.svg"></img>
-                                <img class="logo1" id="radiant" src="./assets/Logo/SVG/Asset 1.svg"></img>
-                                <img class="logo3" id="radiant" src="./assets/Logo/SVG/Asset 3.svg"></img>
-                                <img class="logo4" id="radiant" src="./assets/Logo/SVG/Asset 4.svg"></img>
-                                <img class="logo5" id="radiant" src="./assets/Logo/SVG/Asset 5.svg"></img>
-                                <img class="logo6" id="radiant" src="./assets/Logo/SVG/Asset 6.svg"></img>
-                                <img class="logo7" id="radiant" src="./assets/Logo/SVG/Asset 7.svg"></img>
-                                <img class="logo8" id="radiant" src="./assets/Logo/SVG/Asset 8.svg"></img>
-                                <img class="logo9" id="radiant" src="./assets/Logo/SVG/Asset 9.svg"></img>
-                                <img class="radiant__mobile" src="./assets/Logo/SVG/radaja.svg"></img>
+                                <img class="logo1" id="radiant1" src="./assets/Logo/SVG/Asset 1.svg"></img>
+                                <img class="logo3" id="radiant3" src="./assets/Logo/SVG/Asset 3.svg"></img>
+                                <img class="logo4" id="radiant4" src="./assets/Logo/SVG/Asset 4.svg"></img>
+                                <img class="logo5" id="radiant5" src="./assets/Logo/SVG/Asset 5.svg"></img>
+                                <img class="logo6" id="radiant6" src="./assets/Logo/SVG/Asset 6.svg"></img>
+                                <img class="logo7" id="radiant7" src="./assets/Logo/SVG/Asset 7.svg"></img>
+                                <img class="logo8" id="radiant8" src="./assets/Logo/SVG/Asset 8.svg"></img>
+                                <img class="logo9" id="radiant9" src="./assets/Logo/SVG/Asset 9.svg"></img>
+                                <img class="radiant__mobile" id="radmobile" src="./assets/Logo/SVG/radaja.svg"></img>
+                                
                             <h1 class="valid">EZZE #4469</h1>
                             <h2 class="valid2">vALORANT</h2>
                             <li class="valid3"><div class="circle"></div>Away</li>
