fix mobile mode button

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
                     <li class="nav__item" > <a class="nav__links" href="#">Playlist</a> </li>
                     <li class="nav__item" > <a class="nav__links" href="portfolio.html">Portfolio </a></li>
                     <li class="nav__btn" id="mesage" > <a class="button"href="#"> Message</a></li>
+                    <li class="light__mode" id="lightmode"><img src="./assets/Icons/Light_mode.svg"></img></li>
 
                 </ul>
             </div>
@@ -80,6 +81,6 @@
     </bodie>
 
 </body>
-<script src="./Bjava.js"></script>
+<script src="Bjava.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
 </html>
