saving lightmode to localstorage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="nav__item" > <a class="nav__links" href="#">Playlist</a> </li>
                     <li class="nav__item" > <a class="nav__links" href="portfolio.html">Portfolio </a></li>
                     <li class="nav__btn" id="mesage"> <a class="button"href="#"> Message</a></li>
-                    <li class="light__mode" id="lightmode"><img src="./assets/Icons/Light_mode.svg"></img></li>
+                    <li class="light__mode" id="lightmode"><img src="assets/Icons/Light_mode.svg"></img></li>
                 </ul>
                 
             </div>
