--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
                 <ul class="nav__menu">
                     <li class="nav__item" > <a class="nav__links" href="#">Gamers</a> </li>
                     <li class="nav__item" > <a class="nav__links" href="#">Playlist</a> </li>
-                    <li class="nav__item" > <a class="nav__links" href="portfolio.html">Portfolio </a></li>
+                    <li class="nav__item" > <a class="nav__links" href="#">Portfolio </a></li>
                     <li class="nav__btn" id="mesage" > <a class="button"href="#"> Message</a></li>
-                    <li class="light__mode" id="lightmode"><img src="./assets/Icons/Light_mode.svg"></img></li>
+                    <li class="light__mode" id="lightmode"><img src="assets/Icons/Light_mode.svg"></img></li>
 
                 </ul>
             </div>
